# story-spark-studio

./: .env.example  .gitignore  PRIVACY.md  README.md  SAMPLE-STORY.md  START-HERE.md  design-qa.md  pyproject.toml  requirements.txt  storefront-listing.md  vercel.json
api/: __init__.py  checkout.py  common.py  event.py  generate.py  health.py  license.py  redeem.py
scripts/: serve.py
story_spark/: __init__.py  ai.py  analytics.py  generator.py  licenses.py  models.py  safety.py  store.py
tests/: test_analytics.py  test_generator.py  test_licenses.py  test_store.py
web/: app.js  index.html  styles.css
