[project]
name = "story-spark-studio"
version = "1.0.0"
description = "Personalized parent-first story generator and printable storybook studio."
requires-python = ">=3.12"
dependencies = [
  "openai>=2.15,<3",
  "pydantic>=2.10,<3",
  "stripe>=12,<13",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

